--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ streamlit==1.28.1
 streamlit-option-menu==0.3.6
 
 # Document Processing
-PyMuPDF==1.23.9
+pdfplumber==0.10.3
 python-docx==1.1.0
 pytesseract==0.3.10
 Pillow==10.1.0
