--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,15 @@
-# Streamlit AI Document Processor - Requirements
+# Streamlit AI Document Processor - Cloud Compatible
 
 # Core Framework
 streamlit==1.28.1
-streamlit-option-menu==0.3.6
 
-# Document Processing
+# Document Processing (Cloud Compatible)
 pdfplumber==0.10.3
 python-docx==1.1.0
-pytesseract==0.3.10
 Pillow==10.1.0
 
-# AI & NLP
+# AI & NLP  
 openai==1.3.7
-tiktoken==0.5.2
 
 # Data Processing
 pandas==2.1.4
@@ -20,19 +17,12 @@ numpy==1.24.4
 
 # Visualization
 plotly==5.17.0
-matplotlib==3.8.2
-
-# Image Processing
-opencv-python-headless==4.8.1.78
 
 # Utilities
 python-dotenv==1.0.0
 requests==2.31.0
 
-# Optional: Advanced NLP (uncomment if needed)
-# spacy==3.7.2
-# transformers==4.36.2
-
-# Development Tools (optional)
-# pytest==7.4.3
-# black==23.11.0
+# Remove problematic packages:
+# pytesseract (needs system tesseract)
+# PyMuPDF (needs C compiler)
+# opencv-python (too heavy)
