--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,8 @@
-# Streamlit AI Document Processor - Cloud Compatible
+# Minimal Streamlit AI Document Processor
 
-# Core Framework
-streamlit==1.28.1
-
-# Document Processing (Cloud Compatible)
-pdfplumber==0.10.3
-python-docx==1.1.0
-Pillow==10.1.0
-
-# AI & NLP  
-openai==1.3.7
-
-# Data Processing
-pandas==2.1.4
-numpy==1.24.4
-
-# Visualization
-plotly==5.17.0
-
-# Utilities
-python-dotenv==1.0.0
-requests==2.31.0
-
-# Remove problematic packages:
-# pytesseract (needs system tesseract)
-# PyMuPDF (needs C compiler)
-# opencv-python (too heavy)
+streamlit
+pandas
+plotly
+python-docx
+openai
+requests
